# isaac_ros_cloud_control

isaac_ros_cloud_control_interface/: CMakeLists.txt  package.xml
isaac_ros_cloud_control_interface/action/: HumanoidTask.action
isaac_ros_json_info_generator/: README.md  package.xml  setup.py
isaac_ros_mega_controller/: package.xml  setup.py
isaac_ros_mega_controller/isaac_ros_mega_controller/: isaac_ros_mega_controller.py
isaac_ros_mega_controller/params/: nova_carter_navigation_mega.yaml
isaac_ros_mega_node_monitor/: package.xml  setup.py
isaac_ros_mission_client/: package.xml
isaac_ros_mqtt_bridge/: package.xml  setup.py
isaac_ros_scene_recorder/: package.xml  setup.py
isaac_ros_scene_recorder/isaac_ros_scene_recorder/: isaac_ros_scene_recorder.py
isaac_ros_scene_recorder_interface/: CMakeLists.txt  package.xml
isaac_ros_scene_recorder_interface/action/: StartRecording.action  StopRecording.action
isaac_ros_vda5050_client/: CMakeLists.txt  package.xml  plugin.xml
isaac_ros_vda5050_client/config/: config.yaml
isaac_ros_vda5050_client/include/isaac_ros_vda5050_client/: example_action_handler.hpp  vda5050_client_node.hpp
isaac_ros_vda5050_client/src/: example_action_handler.cpp  vda5050_client_main.cpp  vda5050_client_node.cpp
isaac_ros_vda5050_client/test/: test_nav2_client.py
isaac_ros_vda5050_client/test/test_nodes/: nav2_simple_server.py
isaac_ros_vda5050_client/test/test_orders/: none_blocking_action.json  order_with_action_failure.json  parallel_action.json  simple_order.json  soft_blocking_action.json
isaac_ros_vda5050_client_bringup/: CMakeLists.txt  package.xml
isaac_ros_vda5050_client_bringup/config/: carter_navigation_params.yaml  vda5050_client_params.yaml
isaac_ros_vda5050_client_bringup/launch/: isaac_ros_vda5050_client.launch.py  isaac_ros_vda5050_client_nav2.launch.py
vda5050_action_handler/: CMakeLists.txt  package.xml
vda5050_action_handler/include/vda5050_action_handler/: vda5050_action_handler.hpp
vda5050_action_handler_plugins/: CMakeLists.txt  package.xml  plugins.xml
vda5050_action_handler_plugins/include/vda5050_action_handler_plugins/: docking_handler.hpp  pick_and_place_handler.hpp  scene_recorder_handler.hpp
vda5050_action_handler_plugins/src/: docking_handler.cpp  pick_and_place_handler.cpp  scene_recorder_handler.cpp
vda5050_msgs/: package.xml
